--- a/README.Rmd
+++ b/README.Rmd
@@ -9,15 +9,24 @@ output:
 
 [![Build Status](https://travis-ci.org/fabian-s/tidyfun.svg?branch=master)](https://travis-ci.org/fabian-s/tidyfun)
 
-**`tidyfun`** makes data wrangling and exploratory analysis of functional data easier.
+The goal of **`tidyfun`** is to provide accessible and well-documented software 
+that **makes functional data analysis in `R` easy**, specifically:  
+data wrangling and exploratory analysis.
 
 **`tidyfun`** provides:  
 
-- new **data types** for representing functional data
-- arithmetic **operators**, descriptive **statistics** and **graphics** functions for such data
-- `tidyverse`-verbs for handling functional data **inside** data frames.
+- new **data types** for representing functional data: **`tfd`** & **`tfb`**
+- arithmetic **operators** and descriptive **statistics** for such data
+- `tidyverse`-verbs for handling functional data -- especially **inside** data frames
+- new **graphics** functions for `tf` vectors and tidy functional data frames
 
-Look [here](https://fabian-s.github.io/tidyfun/articles/x01_Intro.html) for an introduction with examples.
+
+For detailed information on the features of `tidyfun`, check out articles on the following topics:
+
+- [Representing](https://fabian-s.github.io/tidyfun/articles/01_tf_Vectors.html) functional data as `tf` vectors, and operating on those vectors
+- [Converting](https://fabian-s.github.io/tidyfun/articles/02_Conversion.html) non-tidy functional data (matrices, "long" and "wide" data frames) to tidy functional data
+- [Wrangling](https://fabian-s.github.io/tidyfun/articles/03_Data_Wrangling.html) data frames that include functional data using `tidyverse` and `tidyfun` tools
+- [Visualizing](https://fabian-s.github.io/tidyfun/articles/04_Visualization.html) tidy functional data
 
 ## Installation
 
